# BridgeZoo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_env.py
.claude/rules/: python-style.md  tests.md
.github/workflows/: publish.yml
archive/: README.md  optimize_cable_forces.py  plot_completed_balance.py
archive/bridgezoo_v0/: pistonball_v6.py  resection_v1.py
archive/fem_legacy/: oneshot_opensees_ref.py  opensees_staged.py
archive/tests_v0/: test_env.py  test_ops.py  test_train.py
bridgezoo/: __init__.py  pistonball_v6.py
bridgezoo/cablebridge/: cablebridge.py  cablebridge2.py  cablebridge_base.py  cablebridge_models.py  fem.py
bridgezoo/envs/: __init__.py  cable_agent.py  cable_construction.py  geometry.py
bridgezoo/fem/: __init__.py  builder.py  kernels.py  linear_frame.py  (+5 more)
docs/: ARCHITECTURE.md  DESIGN_MAPPO.md  PAPER_OUTLINE_CN_EI.md  PAPER_OUTLINE_OPTIM_CN.md  索力优化算法说明.md
scripts/: baselines.py  evaluate.py  oneshot_opensees.py  optimize_cables.py  plot_completed_balance.py  plot_oneshot_balance.py  plot_staged_deck_growth.py  staged_analysis.py  staged_demo.py  train.py  validate_fem.py  validate_staged.py
test/: test2.py  test_env.py  test_env_DI.py  test_train.py
tests/: conftest.py  test_completed_direct.py  test_completed_staged_params.py  test_deformed_shape.py  test_env.py  test_geometry.py  test_linear_frame.py  test_mappo.py  test_oneshot_staged_params.py  test_optim.py  test_staged.py  test_staged_batch.py
tools/: README.md  export_dxf.py  profile_fem.py
(+63 files in other folders)
